# hacknation_buono_studio

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  readme-dev.md  readme.md
.cursor/: mcp.json
.cursor/rules/: backend.mdc  frontend.mdc  shared.mdc
.github/workflows/: deploy-frontend-render.yml  deploy-render.yml
app/: main.py
app/api/v1/: routes_agent_chat.py  routes_chat.py  routes_form_assist.py  routes_forms.py  routes_health.py  routes_pipeline.py
app/core/: auth.py  config.py  db.py
app/models/: __init__.py  accident.py  analysis.py  assistant_session.py  attachment.py  base.py  business.py  dynamic.py  enums.py  people.py  tenant.py
app/pipeline/: __init__.py
app/schemas/: accident.py  accident_form.py  chat.py  pipeline.py
app/services/: assistant_memory.py  case_service.py  chroma_client.py  forms.py  pipeline.py
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  PROMPTS.md  backend_scheleton.md  db_schema.md  langchain_setup.md  mcp-setup.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
migrations/: env.py
migrations/versions/: 20241206_000001_init_accident_schema.py  20241206_000002_assistant_sessions.py  20241207_000003_analysis_cases.py
scripts/: build_ft_dataset.py  export_chroma_ft.py  ingest_chroma_zus.py  run_ocr_examples.sh  run_ocr_inline.py  split_ft_dataset.py
tests/: test_assistant_memory.py  test_field_guidance.py  test_health.py  test_pipeline_upload.py
(+1585 files in other folders)
